[package]
name = "entry"
description = "A simple note-taking tool"
version = "0.2.0"
authors = ["Byron Batteson <byronbatteson@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
keywords = ["tool", "note", "journal"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "battesonb/entry", branch = "master" }

[dependencies]
assert_cmd = "0.12"
directories-next = "2.0"
chrono = "0.4"
confy = "0.3"
exitfailure = "0.5"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
shellexpand = "1.1"
structopt = "0.3"
serde_json = "1.0"
